2003-12-03  Roland Mas  <99.roland.mas@aist.enst.fr>

	* deb-specific/db-upgrade.pl: Upgrade database using 20031126.sql.

	* www/include/languages/German.tab: Patch #623 from Marco Schmidt
	<schmidtmarco@web.de> improving German localisation.

2003-11-30  Tim Perdue  <tim@perdue.net>

	* Adding switches for turning tools on/off
	* Adding phone/fax/address/title to user
	* Couple of date -> post_date field changes

	* added cronjob logging and viewing apparatus

2003-11-30  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/project_home.php: Patch #614 from Guillaume Smet
	adding the group/long_tracker key.
	* www/include/languages/Base.tab, www/include/languages/Dutch.tab,
	www/include/languages/French.tab,
	www/include/languages/Italian.tab,
	www/include/languages/Japanese.tab,
	www/include/languages/Korean.tab,
	www/include/languages/Russian.tab,
	www/include/languages/SimplifiedChinese.tab,
	www/include/languages/Spanish.tab,
	www/include/languages/Swedish.tab: Ditto.

	* www/include/languages/French.tab: Also in patch #614: some more
	French localisation.

2003-11-29  Michael Jennings  <mej@eterm.org>

	* gforge.spec: Change ownership/permissions so cron jobs work
	properly.

2003-11-29  Roland Mas  <99.roland.mas@aist.enst.fr>

	* utils/include.pl (db_drop_table_if_exists): Execute the
	statement, don't just prepare it.

	* www/tracker/browse.php, common/tracker/ArtifactFactory.class,
	www/include/languages/Japanese.tab,
	www/include/languages/Base.tab: "Last changed" filter for tracker
	browser.  This is patch #560 from Hidenari Miwa and Tsutomu
	Tominaga.
	* db/20031129.sql: New file (patch #560 from Hidenari Miwa and
	Tsutomu Tominaga).
	* deb-specific/db-upgrade.pl: Upgrade database using 20031129.sql.
	
	* deb-specific/db-upgrade.pl: Upgrade database schema using
	20031105.sql and 20031124.sql.

	* www/admin/approve-pending.php: Patch #606 from Guillaume Smet
	fixing a localisation key.
